# pantr

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  THIRD_PARTY_NOTICES  hatch_build.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.claude/: settings.json
.claude/skills/new-feature/: SKILL.md
.claude/skills/pre-pr-checks/: SKILL.md
.github/workflows/: ci.yaml  release.yaml
benchmarks/: bench_algoim  bench_algoim.cpp  bench_extraction_batch.py  bench_grid_cell_quadrature.py  bench_grid_footprint.py  bench_grid_locate.py  bench_thb_eval.py  profile_implicit_quad.py
demos/: 01_visualization_basics.py  02_basis_gallery.py  02_visualization_basics.py  03_bspline_geometry_tour.py  04_knot_operations.py  05_approximation.py  06_cad_modeling.py  07_bezier_and_roots.py  08_thb_adaptive_refinement.py  09_grids_and_quadrature.py  10_transforms.py  GALLERY_HEADER.rst  README.md  demo_implicit_reparam.py
docs/: approximation.md  basis-and-quadrature.md  bezier.md  bsplines.md  changelog.md  conf.py  constructive-geometry.md  distributed-spaces.md  getting-started.md  index.md  parallelism.md  references.bib  references.md  requirements.txt  spanwise-element-extraction.md  splines.md  thb-splines.md  visualization.md
docs/api/: reference.md
docs/guide/: cad.md  concepts.md  distributed.md  parallelism.md  spaces-knots.md  visualization.md
examples/: mpi_bspline_distribution.py  mpi_thb_distribution.py
src/pantr/: __init__.py  _array_utils.py  _basis_1D.py  _basis_core.py  _basis_lagrange.py  _basis_utils.py  _bezier_core.py  _bezier_degree.py  _bezier_derivative.py  _bezier_eval.py  _bezier_product.py  _bspline_basis_core.py  _bspline_basis_multidim.py  _bspline_blossom.py  _bspline_blossom_core.py  _bspline_degree.py  _bspline_degree_core.py  _bspline_derivative.py  _bspline_eval.py  _bspline_extraction.py  _bspline_knot_insertion.py  _bspline_knot_insertion_core.py  _bspline_knots.py  _bspline_product.py  _bspline_product_nd.py  _bspline_space_factory.py  _control_points_utils.py  _interpolation_utils.py  _numba_compat.py  _parallel.py  _transform_control_points.py  basis.py  bezier.py  bspline.py  bspline_space_1D.py  bspline_space_nd.py  change_basis.py  geometry.py  quad.py  tolerance.py  (+1 more)
src/pantr/basis/: __init__.py  _basis_1D.py  _basis_core.py  _basis_lagrange.py  _basis_multidim.py  _basis_tabulate.py  _basis_utils.py
src/pantr/bezier/: __init__.py  _batch_core.py  _bezier.py  _bezier_collapse.py  _bezier_compose.py  _bezier_core.py  _bezier_degree.py  _bezier_derivative.py  _bezier_eval.py  _bezier_interpolate.py  _bezier_norm.py  _bezier_product.py  _bezier_restrict.py  _bezier_sign.py  _bezier_slice.py  _bezier_split.py  _bezier_utils.py  _clipping_core.py  _find_roots.py  _mask.py  _mask_core.py  _resultant.py  _resultant_matrices.py  _root_finding.py  _root_finding_core.py  _yuksel_core.py
src/pantr/bspline/: __init__.py  _bspline.py  _bspline_basis_core.py  _bspline_basis_multidim.py  _bspline_blossom.py  _bspline_blossom_core.py  _bspline_degree.py  _bspline_degree_core.py  _bspline_derivative.py  _bspline_eval.py  _bspline_extraction.py  _bspline_geom.py  _bspline_interpolate.py  _bspline_knot_insertion.py  _bspline_knot_insertion_core.py  _bspline_knot_removal.py  _bspline_knot_removal_core.py  _bspline_knots.py  _bspline_product.py  _bspline_product_nd.py  _bspline_quasi_interpolation.py  _bspline_restrict.py  _bspline_slice.py  _bspline_space_1d.py  _bspline_space_factory.py  _bspline_space_nd.py  _bspline_split.py  _bspline_to_beziers.py  _coupling_graph.py  _extraction_helpers.py  _extraction_kernels.py  _local_space.py  _partition_graph.py  _thb_eval_core.py  _thb_quasi_interpolation.py  _thb_spline.py  _thb_spline_space.py  multilevel_extraction.py  spanwise_element_extraction.py
src/pantr/cad/: __init__.py  _compat.py  _coons.py  _derived.py  _join.py  _operations.py  _primitives.py  _validation.py
src/pantr/grid/: __init__.py  _bvh.py  _bvh_core.py  _cell_index.py  _cell_quadrature.py  _grid.py  _grid_utils.py  _hier_core.py  _hierarchical_grid.py  _locate_core.py  _overlay.py  _partition.py  _partition_grid.py  _tags.py  _tensor_product_grid.py
src/pantr/mpi/: __init__.py  _collocation.py  _create.py  _distributed_function.py  _distributed_space.py  _from_dolfinx.py  _l2.py  _qi.py  _thb_qi.py  _thread_policy.py
src/pantr/root_finding/: __init__.py  _batch_core.py  _clipping_core.py  _find_roots.py  _root_finding.py  _root_finding_core.py  _yuksel_core.py
src/pantr/viz/: __init__.py  _common.py  _control_points.py  _grid.py  _knot_lines.py  _lazy_import.py  _scene.py  _vtk_cells.py  (+2 more)
tests/: _thb_assembly.py  conftest.py  test_aabb.py  test_auto_reduce_degree.py  test_basis.py  test_bernstein_underflow.py  test_bezier.py  test_bezier_collapse.py  test_bezier_compose.py  test_bezier_implicit_shim.py  test_bezier_interpolate.py  test_bezier_mask.py  test_bezier_norm.py  test_bezier_resultant.py  test_bezier_resultant_matrices.py  test_bezier_reverse_permute.py  test_bezier_sign.py  test_bezier_slice.py  test_bezier_split.py  test_bspline.py  test_bspline_basis_derivatives_1D.py  test_bspline_basis_tol_guard_scale.py  test_bspline_blossom.py  test_bspline_conversion.py  test_bspline_derivative.py  test_bspline_evaluate_derivatives_multi_dim.py  test_bspline_evaluate_multi_dim.py  test_bspline_evaluation.py  test_bspline_interpolate.py  test_bspline_product.py  test_bspline_product_nd.py  test_bspline_reverse_permute.py  test_bspline_slice.py  test_bspline_space.py  test_bspline_space_1D.py  test_bspline_split.py  test_cad_compat.py  test_cad_coons.py  test_cad_derived.py  test_cad_join.py  (+64 more)
tests/data/: tanh_sinh_golden.npz
tests/mpi/: test_distributed_mpi.py  test_thread_policy_mpi.py
tutorials/: 01_first_bspline.py  02_visualization.py  03_knot_operations.py  04_cad_modeling.py  05_approximation.py  06_polynomial_bases.py  07_bezier_and_roots.py  08_thb_adaptive_refinement.py  09_grids_and_quadrature.py  10_transforms.py  GALLERY_HEADER.rst
(+17 files in other folders)
