[build-system]
requires = ["hatchling>=1.12.0"]
build-backend = "hatchling.build"

[project]
name = "pantr"
version = "0.5.1"
description = "Polynomial And NURBS Toolkit"
readme = "README.md"
requires-python = ">=3.10, <3.15"
license = { text = "MIT License" }
authors = [{ name = "Pablo Antolin", email = "pablo.antolin@epfl.ch" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
]
# Always-on runtime dependencies. Optional features (MPI, METIS partitioning,
# visualization) live in `[project.optional-dependencies]` and are opt-in.
dependencies = [
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "numba>=0.63",
  "threadpoolctl>=3.0",
]

[project.optional-dependencies]
mpi = [
  "mpi4py>=3.1,<5",
]
metis = [
  "pymetis>=2025.2",
]
viz = [
  "pyvista>=0.43,<1",
]
docs = [
  "sphinx>=7.2,<8",
  "sphinx-rtd-theme>=1.3,<2",
  "sphinx-rtd-dark-mode>=1.3,<2",
  "breathe>=4.35,<5",
  "markdown>=3.5,<4",
  "myst-parser>=2.0,<3",
  "linkify-it-py>=2.0,<3",
  "matplotlib>=3.8,<4",
]
# `dev` pulls in every optional feature extra so a single
# `pip install -e ".[dev]"` yields a complete contributor environment and CI runs
# the full suite (no silently skipped viz/MPI/METIS tests).
dev = [
  "pytest>=7.4,<9",
  "pytest-cov>=4,<6",
  "pytest-xdist>=3,<4",
  "mypy>=1.10,<2",
  "ruff>=0.12.0,<0.13",
  "pre-commit>=3.6,<4",
  "import-linter>=2.0,<3",
  "pantr[mpi]",
  "pantr[metis]",
  "pantr[viz]",
  "pantr[docs]",
]

[project.urls]
Homepage = "https://github.com/pantolin/pantr"
Documentation = "https://pantr.readthedocs.io"
Source = "https://github.com/pantolin/pantr"
Issues = "https://github.com/pantolin/pantr/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pantr"]

[tool.hatch.version]
path = "src/pantr/__init__.py"

[tool.importlinter]
root_package = "pantr"

[[tool.importlinter.contracts]]
name = "Serial core must not import pantr.mpi"
type = "forbidden"
source_modules = [
  "pantr.basis",
  "pantr.bezier",
  "pantr.bspline",
  "pantr.cad",
  "pantr.change_basis",
  "pantr.geometry",
  "pantr.grid",
  "pantr.quad",
  "pantr.tolerance",
  "pantr.transform",
  "pantr.viz",
]
forbidden_modules = ["pantr.mpi"]
