[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pantr"
description = "Polynomial And NURBS Toolkit"
readme = "README.md"
requires-python = ">=3.11, <3.15"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES"]
authors = [{ name = "Pablo Antolin", email = "pablo.antolin@epfl.ch" }]
keywords = [
  "nurbs",
  "b-spline",
  "bezier",
  "bernstein",
  "spline",
  "isogeometric-analysis",
  "cad",
  "geometric-modeling",
  "quadrature",
  "scientific-computing",
]
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
]
# Always-on runtime dependencies. Optional features (MPI, METIS partitioning,
# visualization) live in `[project.optional-dependencies]` and are opt-in.
dependencies = [
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "numba>=0.63",
  "threadpoolctl>=3.0",
]

[project.optional-dependencies]
mpi = [
  "mpi4py>=3.1,<5",
]
metis = [
  "pymetis>=2025.2",
]
viz = [
  "pyvista>=0.43,<1",
]
docs = [
  "sphinx>=7.2,<8",
  "sphinx-rtd-theme>=1.3,<2",
  "sphinx-rtd-dark-mode>=1.3,<2",
  "myst-parser>=2.0,<3",
  "linkify-it-py>=2.0,<3",
  # Sphinx-Gallery executes the `demos/` scripts and embeds their output; pyvista
  # renders the 3-D scenes off-screen and the trame stack (+ nest_asyncio2)
  # exports them as interactive vtk.js widgets. On headless builders docs/conf.py
  # starts Xvfb and VTK renders via Mesa software GL (RTD installs them through
  # `.readthedocs.yaml`; GitHub's ubuntu-latest ships them).
  "sphinx-gallery>=0.15,<1",
  "sphinx-design>=0.5,<1",
  "pantr[viz]",
  "trame>=3,<4",
  "trame-vtk>=2,<3",
  "trame-vuetify>=2,<4",
  "nest-asyncio2>=1,<2",
]
# `dev` pulls in every optional feature extra so a single
# `pip install -e ".[dev]"` yields a complete contributor environment and CI runs
# the full suite (no silently skipped viz/MPI/METIS tests).
dev = [
  "pytest>=7.4,<9",
  "pytest-cov>=4,<6",
  "pytest-xdist>=3,<4",
  "mypy>=1.10,<2",
  "ruff>=0.12.0,<0.13",
  "pre-commit>=3.6,<4",
  "import-linter>=2.0,<3",
  "pantr[mpi]",
  "pantr[metis]",
  "pantr[viz]",
  "pantr[docs]",
]

[project.urls]
Homepage = "https://github.com/pantolin/pantr"
Documentation = "https://pantr.readthedocs.io"
Source = "https://github.com/pantolin/pantr"
Issues = "https://github.com/pantolin/pantr/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pantr"]

# Single source of truth for the version: `__version__` in the package __init__.
# The explicit pattern is required because the assignment carries a type
# annotation (`__version__: Final[str] = "..."`), which hatchling's default
# regex does not match.
[tool.hatch.version]
path = "src/pantr/__init__.py"
pattern = '^__version__[^=]*=\s*"(?P<version>[^"]+)"'

[tool.importlinter]
root_package = "pantr"

[[tool.importlinter.contracts]]
name = "Serial core must not import pantr.mpi"
type = "forbidden"
source_modules = [
  "pantr.basis",
  "pantr.bezier",
  "pantr.bspline",
  "pantr.cad",
  "pantr.change_basis",
  "pantr.geometry",
  "pantr.grid",
  "pantr.quad",
  "pantr.tolerance",
  "pantr.transform",
  "pantr.viz",
]
forbidden_modules = ["pantr.mpi"]
